<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_name"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_phone"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_twitter"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_facebook"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_address"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_cross_street"
            style="@style/Text.Header" />

        <TextView
            android:id="@+id/venue_cross_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Tailor" />

    </LinearLayout>

</LinearLayout>